更改beetl导入jar包  测试

--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/css/front/index.css"/>
 <link rel="stylesheet" href="/css/kjzt/style.css"/>
 
-<title>欢迎来到Young微博</title>
+<title>${title}</title>
 </head>
 <body>
 	11111111111111111111111111111111
