--- a/src/main/resources/static/css/front/index.css
+++ b/src/main/resources/static/css/front/index.css
@@ -1,10 +1,11 @@
+
 .brand {
 	color: #1EB7C1;
 }
-
 /* 前台导航栏样式 */
 .banner{
 	height: 105px;
+	margin: 0px 50px;
 }
 .banner > .logo {
 	height: 105px;
@@ -18,5 +19,54 @@
 	padding-top: 28px;
 }
 .content{
-	height: 700px;
+	margin-top:30px;
+	height: 1700px;
 }
+.content > div > .topic{
+	height: 195px;
+	margin-top:20px;
+	border-bottom: 2px dashed;
+    border-image: -webkit-linear-gradient( #5CD1FD, #C86DD7) 30 30;
+    border-image: -moz-linear-gradient( #5CD1FD, #C86DD7) 30 30;
+    border-image: linear-gradient(to bottom right, #5CD1FD, #C86DD7) 10 10;
+}
+.content > div > .topic > span{
+	padding-right: 30px;
+}
+
+.content > div > .fenye{
+	text-align: center;
+}
+
+.right > .zxytags{
+	margin-top:40px;
+	margin-bottom:130px;
+	padding-top:10px;
+	padding-left:5px;
+	font-size: 25px;
+}
+h2{
+	text-align: center;
+	margin-bottom: 35px;
+	margin-top: 20px;
+}
+.right > .myProfile{
+	
+}
+
+.right > .myProfile > .xinxi{
+	padding-top:30px;
+	font-size: 30px;
+	margin-left: 35px;
+	line-height: 50px;
+	border: 1px #1A7DA8 solid;
+	height: 460px;
+}
+
+.footer{
+	border-top: 3px #000 solid;
+	text-align: center;
+	font-size: 20px;
+	padding-top: 10px;
+}
+	
