--- a/src/main/resources/templates/front/content.html
+++ b/src/main/resources/templates/front/content.html
@@ -104,19 +104,27 @@
 				<div class="myProfile"><!-- 右下 -->
 					<h2>博主简介</h2>
 					<div class="xinxi">
-						<div class="col-md-7">
-							<span>姓名：张旭阳 </span><br/>
-							<span>英文名：Young</span><br/>
-							<span>出生：1994.8.15</span><br/>
-							<span>籍贯：河南郑州</span><br/>
-							<span>岗位：java开发</span><br/>
-							<span>工龄：3年</span><br/>
-							<span>Q Q：994134665</span><br/>
-							<span>微信：qingxin994</span><br/>
-						</div>
-						<div class="col-md-5">
+						<ul class="list-group">
+						    <li class="list-group-item">姓名：张旭阳</li>
+						    <li class="list-group-item">英文名：Young</li>
+						    <li class="list-group-item">出生：1994.8.15</li>
+						    <li class="list-group-item">籍贯：河南郑州</li>
+						    <li class="list-group-item">岗位：java开发</li>
+						    <li class="list-group-item">工龄：3年</li>
+						    <li class="list-group-item">Q Q：994134665</li>
+						    <li class="list-group-item">微信：qingxin994</li>
+						</ul>
+						<!-- <span>姓名：张旭阳 </span><br/>
+						<span>英文名：Young</span><br/>
+						<span>出生：1994.8.15</span><br/>
+						<span>籍贯：河南郑州</span><br/>
+						<span>岗位：java开发</span><br/>
+						<span>工龄：3年</span><br/>
+						<span>Q Q：994134665</span><br/>
+						<span>微信：qingxin994</span><br/> -->
+						<!-- <div class="col-md-5">
 							<img alt="照片" src="/image/me.jpg" width="90%" height="90%">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
