--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -7,6 +7,7 @@
 <script src="/js/layer/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/front/index.js" type="text/javascript" charset="utf-8"></script>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="/js/layer/mobile/need/layer.css"/>
 <link rel="stylesheet" href="/css/front/general.css"/>
 <link rel="stylesheet" href="/css/front/index.css"/>
 <link rel="stylesheet" href="/css/kjzt/style.css"/>
@@ -122,7 +123,7 @@
 					<ul class="nav nav-pills nav-stacked">
 						<%for(tag in tagList){%>
 							<li>
-								<a href="/index?">
+								<a href="/index?tid=${tag.id}">
 									<span class="badge pull-right">${tag.count}</span>
 									${tag.name}
 								</a>
@@ -133,19 +134,19 @@
 				<div class="myProfile"><!-- 右下 -->
 					<h2>博主简介</h2>
 					<div class="xinxi">
-						<div class="col-md-7">
-							<span>姓名：张旭阳 </span><br/>
-							<span>英文名：Young</span><br/>
-							<span>出生：1994.8.15</span><br/>
-							<span>籍贯：河南郑州</span><br/>
-							<span>岗位：java开发</span><br/>
-							<span>工龄：3年</span><br/>
-							<span>Q Q：994134665</span><br/>
-							<span>微信：qingxin994</span><br/>
-						</div>
-						<div class="col-md-5">
+						<ul class="list-group">
+						    <li class="list-group-item">姓名：张旭阳</li>
+						    <li class="list-group-item">英文名：Young</li>
+						    <li class="list-group-item">出生：1994.8.15</li>
+						    <li class="list-group-item">籍贯：河南郑州</li>
+						    <li class="list-group-item">岗位：java开发</li>
+						    <li class="list-group-item">工龄：3年</li>
+						    <li class="list-group-item">Q Q：994134665</li>
+						    <li class="list-group-item">微信：qingxin994</li>
+						</ul>
+						<!-- <div class="col-md-5">
 							<img alt="照片" src="/image/me.jpg" width="90%" height="90%">
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
