--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -5,10 +5,9 @@
 <script src="/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="/js/layer/layer.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/admin/login.js" type="text/javascript" charset="utf-8"></script>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
-<script src="/js/layer/layer.js" type="text/javascript" charset="utf-8"></script>
 <link rel="stylesheet" href="/css/admin/login.css"/>
-<link rel="stylesheet" href="/js/admin/login.js"/>
 <title>young blog后台管理</title>
 </head>
 <body>
@@ -26,11 +25,14 @@
                             <input class="form-control required" type="password" placeholder="密码" id="password" name="password" maxlength="8"/>
                     </div>
                     <div class="form-group col-md-offset-9">
-                        <button id="login" class="btn btn-success pull-right" name="submit">登录</button>
+                        <button id="loginButton" class="btn btn-success pull-right" name="submit">登录</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+<script type="text/javascript">
+
+</script>
 </html>
