--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,9 +2,97 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title></title>
+<script src="/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/layer/layer.js" type="text/javascript" charset="utf-8"></script>
+<script src="/js/admin/index.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"/>
+<link rel="stylesheet" href="/css/admin/index.css"/>
+<title>管理控制台</title>
 </head>
 <body>
+	<!--顶部导航栏部分-->
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" title="logoTitle" href="/admin/index">Young's Blog 管理控制台</a>
+       </div>
+       <div class="collapse navbar-collapse">
+           <ul class="nav navbar-nav navbar-right">
+               <li role="presentation">
+                   <a href="javascript:return false;">当前用户：<span class="badge">${user.userName}</span></a>
+               </li>
+               <li>
+                   <a id="loginOut">
+                      <span class="glyphicon glyphicon-lock"></span>退出登录</a>
+                </li>
+            </ul>
+       </div>
+    </div>      
+</nav>
 
+<!-- 中间主体内容部分 -->
+<div class="pageContainer">
+     <!-- 左侧导航栏 -->
+     <div class="pageSidebar">
+         <ul class="nav nav-stacked nav-pills">
+             <li role="presentation">
+                 <a href="/admin/contentList" target="mainFrame" >文章管理</a>
+             </li>
+             <li role="presentation">
+                 <a href="/admin/tagsList" target="mainFrame">标签管理</a>
+             </li>
+             <li role="presentation">
+                 <a href="/admin/navList" target="mainFrame">导航管理</a>
+             </li>
+             <!-- 开始 -->
+             <!-- <li class="dropdown">
+                 <a class="dropdown-toggle" data-toggle="dropdown" href="nav4.html" target="mainFrame">
+                     个人设置<span class="caret"></span>
+                 </a>
+                 <ul class="dropdown-menu">
+                     <li>
+                         <a href="nav1.html" target="mainFrame">修改密码</a>
+                     </li>
+                     <li>
+                         <a href="nav2.html" target="mainFrame">退出系统</a>
+                     </li>
+                     <li>
+                         <a href="nav3.html" target="mainFrame">查看个人信息</a>
+                     </li>
+                 </ul>
+             </li>
+             结束
+             <li role="presentation">
+                 <a href="nav5.html" target="mainFrame">权限设置</a>
+             </li> -->
+
+
+
+         </ul>
+     </div>
+
+      <!-- 左侧导航和正文内容的分隔线 -->
+     <div class="splitter"></div>
+     <!-- 正文内容部分 -->
+     <div class="pageContent">
+       <iframe src="/admin/welcome" id="mainFrame" name="mainFrame" 
+       frameborder="0" width="100%"  height="100%" >
+       </iframe> 
+     </div>
+
+ </div>
+  <!-- 底部页脚部分 -->
+ <div class="footer">
+     <p class="text-center">
+         2019 &copy; ${user.userName}.
+     </p>
+ </div>
+
+ <script type="text/javascript">
+
+
+
+ </script>
 </body>
 </html>
