--- a/src/main/resources/templates/admin/iframe/welcome.html
+++ b/src/main/resources/templates/admin/iframe/welcome.html
@@ -63,6 +63,7 @@
 	</div>
 </body>
 <script type="text/javascript">
+var data = ${data}
 var month_olypic = [31,29,31,30,31,30,31,31,30,31,30,31];//闰年每个月份的天数
 var month_normal = [31,28,31,30,31,30,31,31,30,31,30,31];
 var month_name =["一月","二月","三月","四月","五月","六月","七月","八月","九月","十月","十一月","十二月"];
@@ -157,7 +158,7 @@ option = {
 	        type: 'value'
 	    },
 	    series: [{
-	        data: [820, 932, 901, 934, 1290, 1330, 1320, 1290, 1330, 1320, 820, 932],
+	        data: data,
 	        type: 'line'
 	    }]
 	};
