--- a/src/main/resources/templates/front/content.html
+++ b/src/main/resources/templates/front/content.html
@@ -102,36 +102,37 @@
 					</ul>
 				</div>
 				<div class="myProfile"><!-- 右下 -->
-					<h2>博主简介</h2>
 					<div class="xinxi">
-						<ul class="list-group">
-						    <li class="list-group-item">姓名：张旭阳</li>
-						    <li class="list-group-item">英文名：Young</li>
-						    <li class="list-group-item">出生：1994.8.15</li>
-						    <li class="list-group-item">籍贯：河南郑州</li>
-						    <li class="list-group-item">岗位：java开发</li>
-						    <li class="list-group-item">工龄：3年</li>
-						    <li class="list-group-item">Q Q：994134665</li>
-						    <li class="list-group-item">微信：qingxin994</li>
-						</ul>
-						<!-- <span>姓名：张旭阳 </span><br/>
-						<span>英文名：Young</span><br/>
-						<span>出生：1994.8.15</span><br/>
-						<span>籍贯：河南郑州</span><br/>
-						<span>岗位：java开发</span><br/>
-						<span>工龄：3年</span><br/>
-						<span>Q Q：994134665</span><br/>
-						<span>微信：qingxin994</span><br/> -->
-						<!-- <div class="col-md-5">
-							<img alt="照片" src="/image/me.jpg" width="90%" height="90%">
-						</div> -->
+						<table class="table table-striped">
+						  <caption>博主简介</caption>
+						  <tbody>
+						    <tr><td colspan="2">姓名：</td><td colspan="3">张旭阳</td></tr>
+						    <tr><td>英文名：</td><td colspan="3">Young</td></tr>
+						    <tr><td>出生：</td><td colspan="3">1994.8.15</td></tr>
+						    <tr><td>籍贯：</td><td colspan="3">河南郑州</td></tr>
+						    <tr><td>岗位：</td><td colspan="3">Java开发</td></tr>
+						    <tr><td>工龄：</td><td colspan="3">3年</td></tr>
+						    <tr><td>Q Q：</td><td colspan="3">994134665</td></tr>
+						    <tr><td>微信：</td><td colspan="3">qingxin994</td></tr>
+						  </tbody>
+						</table>
+						<!-- <ul class="list-group">
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						    <li class="list-group-item"></li>
+						</ul> -->
 					</div>
 				</div>
 			</div>
 			<div class="left col-md-1">
 			</div>
 		</div>
-		<div class="fcol-md-12" style="height:100px; margin-top: 40px;">
+		<div class="col-md-12" style="height:100px; margin-top: 40px;">
 			<div class="col-md-1"></div>
 			<div class="footer col-md-10">
 				<p>Young's blog : www.youngzhang.cn</p>
