--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -84,7 +84,6 @@
 						<h1><a href="/detailed?id=${con.id}">${con.title}</a>
 <!-- 						<small class="text-danger" style="padding-left:300px;"><span class="glyphicon glyphicon-user"></span>Author:${con.author}</small>
  -->						</h1><br/>
-						<h3><a href="/detailed?id=${con.id}">${con.content+"..."}</a></h3><br/>
 						<span><span class="glyphicon glyphicon-time"></span>&nbsp;${con.time,'yyyy-MM-dd HH:mm'}</span>
 						<span><span class="glyphicon glyphicon-eye-open"></span>&nbsp;${con.look}</span>
 						<%for(tag in con.tagList){%>
@@ -96,7 +95,7 @@
 				<div class="fenye">
 					<ul class="pagination">
 						<%if(conList.isHasPreviousPage){%>
-						    <li><a href="/index?pageNum=${conList.prePage}">&laquo;</a></li>
+						    <li><a href="${nav.url}?nid=${nav.id}&pageNum=${conList.prePage}">&laquo;</a></li>
 						<%}%>
 						<%var i = conList.pages;
 						for(i;i>0;i--){%>
@@ -104,10 +103,10 @@
 						    	<%if(i == conList.pageNum){%>
 						    		class="active"
 								<%}%>
-						    ><a href="/index?pageNum=${i}">${i}</a></li>
+						    ><a href="${nav.url}?nid=${nav.id}&pageNum=${i}">${i}</a></li>
 						<%}%>
 						<%if(conList.isHasNextPage){%>
-						    <li><a href="/index?pageNum=${conList.nextPage}">&raquo;</a></li>
+						    <li><a href="${nav.url}?nid=${nav.id}&pageNum=${conList.nextPage}">&raquo;</a></li>
 						<%}%>
 					</ul>
 				</div>
@@ -134,7 +133,20 @@
 				<div class="myProfile"><!-- 右下 -->
 					<h2>博主简介</h2>
 					<div class="xinxi">
-						<ul class="list-group">
+					<table class="table table-striped">
+						  <caption>博主简介</caption>
+						  <tbody>
+						    <tr><td colspan="2">姓名：</td><td colspan="3">张旭阳</td></tr>
+						    <tr><td>英文名：</td><td colspan="3">Young</td></tr>
+						    <tr><td>出生：</td><td colspan="3">1994.8.15</td></tr>
+						    <tr><td>籍贯：</td><td colspan="3">河南郑州</td></tr>
+						    <tr><td>岗位：</td><td colspan="3">Java开发</td></tr>
+						    <tr><td>工龄：</td><td colspan="3">3年</td></tr>
+						    <tr><td>Q Q：</td><td colspan="3">994134665</td></tr>
+						    <tr><td>微信：</td><td colspan="3">qingxin994</td></tr>
+						  </tbody>
+						</table>
+						<!-- <ul class="list-group">
 						    <li class="list-group-item">姓名：张旭阳</li>
 						    <li class="list-group-item">英文名：Young</li>
 						    <li class="list-group-item">出生：1994.8.15</li>
@@ -143,7 +155,7 @@
 						    <li class="list-group-item">工龄：3年</li>
 						    <li class="list-group-item">Q Q：994134665</li>
 						    <li class="list-group-item">微信：qingxin994</li>
-						</ul>
+						</ul> -->
 						<!-- <div class="col-md-5">
 							<img alt="照片" src="/image/me.jpg" width="90%" height="90%">
 						</div> -->
