提交配合补错

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -45,6 +45,9 @@
              <li role="presentation">
                  <a href="/admin/navList" target="mainFrame">导航管理</a>
              </li>
+             <li role="presentation">
+                 <a href="/admin/messList" target="mainFrame">留言管理</a>
+             </li>
              <!-- 开始 -->
              <!-- <li class="dropdown">
                  <a class="dropdown-toggle" data-toggle="dropdown" href="nav4.html" target="mainFrame">
