--- a/src/main/resources/static/css/kjzt/style.css
+++ b/src/main/resources/static/css/kjzt/style.css
@@ -7,7 +7,8 @@
 
 .screen-time {
     font-family: 'lcd';
-    font-size: 30px;
+    font-size: 25px;
     color: #60B7ff;
     text-align: center;
+    line-height: 50px;
 }
