--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -31,8 +31,8 @@
 				  <%}%>
 				</ul>
 			</div>
-			<div class = "navig col-md-3">
-				<form class="form-inline" role="form">
+			<div class = "navSea col-md-3">
+				<form class="form-inline" role="form" style="padding-top: 10px;">
 			        <div class="form-group">
 				        <input type="text" class="form-control" id="likeName"  name = "likeName"
 						   placeholder="请输入关键词" width="100px">
@@ -142,7 +142,7 @@
 			<div class="left col-md-1">
 			</div>
 		</div>
-		<div class="fcol-md-12" style="height:100px; margin-top: 40px;">
+		<div class="fcol-md-12 clear" style="height:100px; margin-top: 40px;">
 			<div class="col-md-1"></div>
 			<div class="footer col-md-10">
 				<p>Young's blog : www.youngzhang.cn</p>
