--- a/src/main/resources/templates/front/message.html
+++ b/src/main/resources/templates/front/message.html
@@ -22,23 +22,26 @@
 	float: left;
 }
 #name{
-	margin-right:50px;
 	float: left;
 	width: 90%;
 }
 .mess{
-	height: 190px;
+	min-height: 130px;
 	border-bottom: 1px #000 dashed;
 	margin-bottom: 10px;
 }
 .name{
 	border-right: 1px #000 dashed;
 	text-align: center;
+	height: 100%;
 }
 .conmes{
 	padding-left:30px;
 	padding-top: 10px;
 	overflow: hidden;
+}
+.form-control{
+	width: 95%;
 }
 </style>
 </head>
@@ -59,7 +62,7 @@
 				  <%}%>
 				</ul>
 			</div>
-			<div class = "navig col-md-3">
+			<div class = "navSea col-md-3">
 				<form class="form-inline" role="form">
 			        <div class="form-group">
 				        <input type="text" class="form-control" id="likeName"  name = "likeName"
