--- a/src/main/resources/static/css/front/index.css
+++ b/src/main/resources/static/css/front/index.css
@@ -24,7 +24,7 @@
 	min-height: 1500px;
 }
 .content > div > .topic{
-	min-height: 110px;
+	min-height: 90px;
 	margin-top:20px;
 	border-bottom: 2px dashed;
     border-image: -webkit-linear-gradient( #5CD1FD, #C86DD7) 30 30;
@@ -38,6 +38,7 @@
 	white-space: nowrap;
 	 overflow: hidden;
 	 text-overflow: ellipsis;
+	 font-size: 20px;
 }
 
 .content > div > .fenye{
@@ -55,6 +56,7 @@ h2{
 	text-align: center;
 	margin-bottom: 35px;
 	margin-top: 20px;
+	font-size: 25px;
 }
 .right > .myProfile{
 	
@@ -71,7 +73,7 @@ h2{
 .footer{
 	border-top: 3px #000 solid;
 	text-align: center;
-	font-size: 20px;
+	font-size: 15px;
 	padding-top: 10px;
 	margin-top: 50px;
 }
@@ -85,7 +87,7 @@ h2{
 	text-align: left;
 }
 .right > .bjtz{
-    height: 150px;
+    height: 50px;
 }
 .right > .bjtz::after{
     content:"";
@@ -93,14 +95,27 @@ h2{
 	position:absolute;
 	left:0px;
 	top:0px;
-	width:100%;
-	height:100%;
+	width:25%;
+	height:120%;
 	background: url("/image/zft.png") no-repeat;
+	background-size: 100%;
 	/* 伪类3D旋转 */
-	animation :myfirst 7s infinite linear;
+	animation :myfirst 10s infinite linear;
 }
 @keyframes myfirst{
     0%{transform:rotate(0deg);}
     100%{transform:rotate(360deg);}
 }
-	
+.list-group-item{
+	font-size: 20px;
+	padding: 5px 10px;
+}	
+.zxytags>.nav>li {
+	font-size: 20px;
+}
+.navig > .nav>li {
+	font-size: 14px;
+}
+.navSea{
+	padding-top: 25px;
+}
