--- a/src/main/resources/templates/front/resumeCheck.html
+++ b/src/main/resources/templates/front/resumeCheck.html
@@ -30,7 +30,7 @@
 				  <%}%>
 				</ul>
 			</div>
-			<div class = "navig col-md-3">
+			<div class = "navSea col-md-3">
 				<form class="form-inline" role="form">
 			        <div class="form-group">
 				        <input type="text" class="form-control" id="likeName"  name = "likeName"
