--- a/src/main/resources/templates/admin/iframe/messList.html
+++ b/src/main/resources/templates/admin/iframe/messList.html
@@ -10,8 +10,6 @@
 <title></title>
 </head>
 <body>
-	<div class="but">
-	</div>
 	<table class="table table-striped">
 	  <caption>留言管理列表</caption>
 	  <thead>
@@ -31,7 +29,7 @@
 		      <td style="line-height: 45px;">${mess.ip}</td>
 		      <td style="line-height: 45px;">${mess.massage}</td>
 		      <td style="line-height: 45px;">
-		      	<button type="button" class="del btn-lg btn-danger" value="${mess.id}"><span class="glyphicon glyphicon-remove"></span> &nbsp;删除</button>
+		      	<button type="button" class="del btn btn-danger" value="${mess.id}"><span class="glyphicon glyphicon-remove"></span> &nbsp;删除</button>
 		      </td>
 		    </tr>
 		<%}%>
