--- a/src/main/resources/templates/admin/iframe/editOrAddView.html
+++ b/src/main/resources/templates/admin/iframe/editOrAddView.html
@@ -44,12 +44,12 @@
   </div>
   <div class="form-group">
     <label class="col-sm-2 control-label required">作者</label>
-    <div class="col-sm-7">
+    <div class="col-sm-6">
       <input type="text" id ="author"  class="form-control" name="author" value="${con.author!}" placeholder="请输入名字">
     </div>
-    <div class="col-sm-1" style="text-align: center;">
-    	<button type="button" id = "moren" class="btn btn-primary btn-xs"> &nbsp;默认</button>
-    	<button type="button" id = "qingchu" class="btn btn-primary btn-xs"> &nbsp;清除</button>
+    <div class="col-sm-2" style="text-align: center;">
+    	<button type="button" id = "moren" class="btn btn-primary btn"> &nbsp;默认</button>
+    	<button type="button" id = "qingchu" class="btn btn-primary btn"> &nbsp;清除</button>
     </div>
     <div class="col-sm-2"></div>
   </div>
