--- a/src/main/resources/templates/admin/iframe/navList.html
+++ b/src/main/resources/templates/admin/iframe/navList.html
@@ -11,13 +11,10 @@
 <title></title>
 </head>
 <body>
-	<div class="but">
-		<a href="/admin/editOrAddNav" class="btn btn-info btn-lg">
-          <span class="glyphicon glyphicon-plus"></span> 添加导航类别
-        </a>
-	</div>
 	<table class="table table-striped">
-	  <caption>导航栏管理列表</caption>
+	  <caption>导航栏管理列表<a href="/admin/editOrAddNav" class="btn btn-info" style="float: right; margin-right: 100px;">
+          <span class="glyphicon glyphicon-plus"></span> 添加导航类别
+        </a></caption>
 	  <thead>
 	    <tr>
 	      <th>序号</th>
@@ -35,8 +32,8 @@
 		      <td style="line-height: 45px;">${nav.url}</td>
 		      <td style="line-height: 45px;">${nav.sort}</td>
 		      <td style="line-height: 45px;">
-		      	<button type="button" class="edit btn-lg btn-primary" value="${nav.id}"><span class="glyphicon glyphicon-edit"></span> &nbsp;编辑</button>
-		      	<button type="button" class="del btn-lg btn-danger" value="${nav.id}"><span class="glyphicon glyphicon-remove"></span> &nbsp;删除</button>
+		      	<button type="button" class="edit btn btn-primary" value="${nav.id}"><span class="glyphicon glyphicon-edit"></span> &nbsp;编辑</button>
+		      	<button type="button" class="del btn btn-danger" value="${nav.id}"><span class="glyphicon glyphicon-remove"></span> &nbsp;删除</button>
 		      </td>
 		    </tr>
 		<%}%>
