配置图片服务器，添加图片上传

--- a/src/main/resources/templates/front/content.html
+++ b/src/main/resources/templates/front/content.html
@@ -78,7 +78,7 @@
 				<div>
 					<h2>${con.title}</h2>
 				</div>
-				<div>
+				<div style="font-size: 25px;">
 					${con.content}
 				</div>
 			</div>
