--- a/src/main/resources/templates/admin/iframe/editOrAddView.html
+++ b/src/main/resources/templates/admin/iframe/editOrAddView.html
@@ -104,13 +104,14 @@
 					<%if(null!=con&&con.top==false){%>
 						checked
 					<%}%>
-					> 否
+					/> 否
 	</label>
 	<label class="radio-inline">
 		<input type="radio" name="top"  value="true"
 				<%if(null!=con&&con.top==true){%>
 						checked
-					<%}%>> 是
+					<%}%>
+					/> 是
 	</label>
     </div>
     <div class="col-sm-2"></div>
@@ -129,6 +130,22 @@
 		var E = window.wangEditor
 		// 或者 var editor = new E( document.getElementById('editor') )
         var editor = new E('#editor')
+		editor.customConfig.uploadImgServer = '/img/upload'; //上传URL
+		editor.customConfig.uploadImgMaxSize = 3 * 1024 * 1024;
+		editor.customConfig.uploadImgMaxLength = 5;    
+		editor.customConfig.uploadFileName = 'myFileName';
+		editor.customConfig.uploadImgHooks = {
+		    customInsert: function (insertImg, result, editor) {
+		                // 图片上传并返回结果，自定义插入图片的事件（而不是编辑器自动插入图片！！！）
+		                // insertImg 是插入图片的函数，editor 是编辑器对象，result 是服务器端返回的结果
+		         
+		                // 举例：假如上传图片成功后，服务器端返回的是 {url:'....'} 这种格式，即可这样插入图片：
+		                var url =result.data;
+		                insertImg(url);
+		         
+		                // result 必须是一个 JSON 格式字符串！！！否则报错
+		            }
+		        }
         editor.customConfig.onchange = function (html) {
             // 监控变化，同步更新到 textarea
             $('#content').val(html)
