--- a/src/main/resources/templates/front/resume.html
+++ b/src/main/resources/templates/front/resume.html
@@ -46,7 +46,7 @@
 			<div class="left col-md-1">
 			</div>
 			<div class="left col-md-7"><!-- 内容体 -->
-				<embed src="/pdf/jl.pdf" width="100%" height="1150"></embed>
+				<embed src="http://www.youngzhang.cn:8999/image/jianli.pdf" width="100%" height="1500"></embed>
 			</div>
 			<div class="right col-md-3"><!-- 右边 -->
 			<div class="myProfile"><!-- 右下 -->
