--- a/src/main/resources/templates/front/resumeCheck.html
+++ b/src/main/resources/templates/front/resumeCheck.html
@@ -132,7 +132,7 @@
 			<div class="left col-md-1">
 			</div>
 		</div>
-		<div class="col-md-12" style="height:100px; margin-top: 40px;">
+		<div class="col-md-12" style="height:100px;">
 			<div class="col-md-1"></div>
 			<div class="footer col-md-10">
 				<p>Young's blog : www.youngzhang.cn</p>
