--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -142,7 +142,7 @@
 			<div class="left col-md-1">
 			</div>
 		</div>
-		<div class="fcol-md-12 clear" style="height:100px; margin-top: 40px;">
+		<div class="fcol-md-12 clear" style="height:100px;">
 			<div class="col-md-1"></div>
 			<div class="footer col-md-10">
 				<p>Young's blog : www.youngzhang.cn &copy; <span id="yearing"></span></p>
