--- a/src/main/resources/templates/front/message.html
+++ b/src/main/resources/templates/front/message.html
@@ -138,7 +138,7 @@
 				<div class="mess">
 					<div class="name col-md-2">
 						<img alt="默认头像" src="http://www.youngzhang.cn:8999/image/bozhu.jpeg" width="70%" height="60%"><br/>
-					Young<br/>博主<br/>
+					Young<br/>
 					</div>
 					<div class="conmes col-md-10" style="font-size: 24px;line-height: 47px;color: blue;"><p>&nbsp; &nbsp; &nbsp; &nbsp; 
 					感谢大家的留言支持。如有朋友留言需要回复，请留下您的邮箱。或者直接发送到我的邮箱。<br/>
