--- a/src/main/resources/static/css/front/index.css
+++ b/src/main/resources/static/css/front/index.css
@@ -36,9 +36,10 @@
 }
 .content > div > .topic > h1{
 	white-space: nowrap;
-	 overflow: hidden;
-	 text-overflow: ellipsis;
-	 font-size: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 24px;
+    line-height: 33px;
 }
 
 .content > div > .fenye{
