--- a/src/main/resources/static/css/front/index.css
+++ b/src/main/resources/static/css/front/index.css
@@ -50,8 +50,8 @@
 	margin-top:40px;
 	margin-bottom:130px;
 	padding-top:10px;
-	padding-left:5px;
 	font-size: 25px;
+	margin-left: 35px;
 }
 h2{
 	text-align: center;
