--- a/src/main/resources/static/css/admin/welcome.css
+++ b/src/main/resources/static/css/admin/welcome.css
@@ -7,7 +7,6 @@
 .boby > div{
 	height: 48%;
 	width: 49%;
-	margin-top: 10px;
 	margin-bottom:10px;
 	border: 2px dashed;
     border-image: -webkit-linear-gradient( #5CD1FD, #C86DD7) 30 30;
@@ -15,13 +14,14 @@
     border-image: linear-gradient(to bottom right, #5CD1FD, #C86DD7) 10 10;
 }
 .boby > .bottom {
-	width: 99%;
+	width: 49%;
+	float: left;
 }
 .boby > .topLeft {
-	margin-right: 15px;
+	margin-right: 10px;
 }
 .boby > .topLeft >h3{
-	padding:5px 5px;
+	padding:8px 5px 0px 0px;
 	text-align: center;
 }
 
@@ -98,8 +98,8 @@ html, body{
     float: left;
 
     /*规定行高，垂直居中*/
-    height: 56px;
-    line-height: 56px;
+    height: 34px;
+    line-height: 34px;
     box-sizing: border-box;
     text-align: center;
     
@@ -123,8 +123,16 @@ html, body{
 }
 .bottom > h3{
 	text-align: center;
-	padding:25px 5px;
+	padding-top: 25px;
 }
 #zxt{
 	height: 80%;
+}
+.bottom > .nav > li > div{
+	width: 97%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	padding: 5px 3px 3px 8px;
+	line-height: 20px;
 }
