留言区修改

--- a/src/main/resources/templates/front/message.html
+++ b/src/main/resources/templates/front/message.html
@@ -91,15 +91,15 @@
 		<div class="content">
 			<div class="left col-md-1">
 			</div>
-			<div class="left col-md-10"><!-- 内容体 -->
-				<div id="myCarousel" class="carousel slide" style="margin-bottom: 40px;">
-				    <!-- 轮播（Carousel）指标 -->
+			<div class="left col-md-7"><!-- 内容体 -->
+<!-- 				<div id="myCarousel" class="carousel slide" style="margin-bottom: 40px;">
+				    轮播（Carousel）指标
 				    <ol class="carousel-indicators">
 				        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				        <li data-target="#myCarousel" data-slide-to="1"></li>
 				        <li data-target="#myCarousel" data-slide-to="2"></li>
 				    </ol>   
-				    <!-- 轮播（Carousel）项目 -->
+				    轮播（Carousel）项目
 				    <div class="carousel-inner">
 				        <div class="item active">
 				            <img src="/image/banner1.png" alt="First slide">
@@ -111,7 +111,7 @@
 				            <img src="/image/banner3.jpg" alt="Third slide">
 				        </div>
 				    </div>
-				    <!-- 轮播（Carousel）导航 -->
+				    轮播（Carousel）导航
 					<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 						<span class="sr-only">Previous</span>
@@ -120,7 +120,7 @@
 						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 						<span class="sr-only">Next</span>
 					</a>
-				</div>
+				</div> -->
 				<div>
 				<div id="editor"></div>
 				  <div class="form-group" style="display: none;">
@@ -173,8 +173,8 @@
 					</ul>
 				</div>
 			</div>
-<!-- 			<div class="right col-md-3">右边
-			    <div class="myProfile">右下
+ 			<div class="right col-md-3">
+			    <div class="myProfile">
 					<div class="xinxi">
 					<h2>归档</h2>
 					<ul class="list-group">
@@ -187,7 +187,7 @@
 					</ul>
 					</div>
 				</div>
-				<div class="zxytags">右上
+				<div class="zxytags">
 					<h2>常用标签组</h2>
 					<ul class="nav nav-pills nav-stacked">
 						<%for(tag in tagList){%>
@@ -200,7 +200,7 @@
 						<%}%>
 					</ul>
 				</div>
-			</div> -->
+			</div>
 			<div class="left col-md-1">
 			</div>
 		</div>
