阅读量优化

--- a/src/main/resources/templates/admin/iframe/contentList.html
+++ b/src/main/resources/templates/admin/iframe/contentList.html
@@ -35,7 +35,7 @@
 		      <td style="line-height: 35px;">${con.time,'yyyy-MM-dd HH:mm:ss'}</td>
 		      <td style="line-height: 35px;">${con.top?"是":"否"}</td>
 		      <td style="line-height: 35px;">${con.look}</td>
-		      <td style="line-height: 35px;"><a href="/detailed?id=${con.id}"><button type="button" class="btn btn-link">点击浏览</button></a></td>
+		      <td style="line-height: 35px;"><a href="/detailed?id=${con.id}&admin=admin"><button type="button" class="btn btn-link">点击浏览</button></a></td>
 		      <td style="line-height: 35px;">${con.nav}</td>
 		      <td style="line-height: 35px;">
 		      	<button type="button" class="edit btn btn-primary" value="${con.id}"><span class="glyphicon glyphicon-edit"></span> &nbsp;编辑</button>
