样式提交 备案号

--- a/src/main/resources/templates/front/content.html
+++ b/src/main/resources/templates/front/content.html
@@ -116,7 +116,7 @@
 		<div class="col-md-12" style="height:100px;">
 			<div class="col-md-1"></div>
 			<div class="footer col-md-10">
-				<p>Young's blog : www.youngzhang.cn</p>
+				<p>Young's blog : www.youngzhang.cn &copy; <span id="yearing"></span> | 豫ICP备19021427号-1</p>
 				<p>本站所有内容如有侵权行为，请联系本人删除！</p>
 				<p>本博客由本人自主开发使用，维权必究。</p>
 			</div>
