--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -57,13 +57,10 @@
 				    <!-- 轮播（Carousel）项目 -->
 				    <div class="carousel-inner">
 				        <div class="item active">
-				            <img src="/image/banner1.png" alt="First slide">
+				            <img src="http://www.youngzhang.cn:8999/image/banner1.jpg" alt="First slide">
 				        </div>
 				        <div class="item">
-				            <img src="/image/banner2.jpg" alt="Second slide">
-				        </div>
-				        <div class="item">
-				            <img src="/image/banner3.jpg" alt="Third slide">
+				            <img src="http://www.youngzhang.cn:8999/image/banner1.jpeg" alt="Second slide">
 				        </div>
 				    </div>
 				    <!-- 轮播（Carousel）导航 -->
