--- a/src/main/resources/templates/front/index.html
+++ b/src/main/resources/templates/front/index.html
@@ -57,10 +57,13 @@
 				    <!-- 轮播（Carousel）项目 -->
 				    <div class="carousel-inner">
 				        <div class="item active">
-				            <img src="http://www.youngzhang.cn:8999/image/banner1.jpg" alt="First slide">
+				            <img src="http://www.youngzhang.cn:8999/image/banner1.jpeg" alt="First slide">
 				        </div>
 				        <div class="item">
-				            <img src="http://www.youngzhang.cn:8999/image/banner1.jpeg" alt="Second slide">
+				            <img src="http://www.youngzhang.cn:8999/image/banner2.jpeg" alt="Second slide">
+				        </div>
+				        <div class="item">
+				            <img src="http://www.youngzhang.cn:8999/image/banner3.jpeg" alt="Third slide">
 				        </div>
 				    </div>
 				    <!-- 轮播（Carousel）导航 -->
