--- a/src/main/resources/templates/hxp/index.html
+++ b/src/main/resources/templates/hxp/index.html
@@ -21,7 +21,7 @@
 </head>
     <body>
 <audio autoplay="autopaly">
-  <source src="renxin.mp3" type="audio/mp3" />
+  <source src="/js/hxp/renxin.mp3" type="audio/mp3" />
 </audio>				
 
         <div id="main">
